--- a/package.json
+++ b/package.json
@@ -1,39 +1,75 @@
 {
-  "name": "parcelng",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.5.0",
-    "ionicons": "3.0.0",
-    "rxjs": "5.4.0",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "2.0.0",
-    "@ionic/cli-plugin-ionic-angular": "1.3.1",
-    "typescript": "2.3.4"
-  },
-  "description": "An Ionic project"
+    "name": "parcelng",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@agm/core": "^1.0.0-beta.0",
+        "@angular/common": "4.2.6",
+        "@angular/compiler": "4.2.6",
+        "@angular/compiler-cli": "4.2.6",
+        "@angular/core": "4.2.6",
+        "@angular/forms": "4.2.6",
+        "@angular/http": "4.2.6",
+        "@angular/platform-browser": "4.2.6",
+        "@angular/platform-browser-dynamic": "4.2.6",
+        "@google/maps": "^0.4.2",
+        "@ionic-native/camera": "^4.0.1",
+        "@ionic-native/core": "3.14.0",
+        "@ionic-native/geolocation": "^4.0.1",
+        "@ionic-native/splash-screen": "3.14.0",
+        "@ionic-native/status-bar": "3.14.0",
+        "@ionic/storage": "2.0.1",
+        "@types/googlemaps": "^3.26.15",
+        "angular2-google-maps": "^0.17.0",
+        "cordova-android": "^6.2.3",
+        "cordova-browser": "^4.1.0",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "googlemaps": "^1.12.0",
+        "ionic-angular": "3.5.0",
+        "ionic-plugin-keyboard": "^2.2.1",
+        "ionicons": "3.0.0",
+        "rxjs": "5.4.2",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.12"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "2.0.0",
+        "@ionic/cli-plugin-cordova": "1.4.1",
+        "@ionic/cli-plugin-ionic-angular": "1.3.2",
+        "@types/googlemaps": "^3.26.15",
+        "typescript": "2.4.1"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-camera": {}
+        },
+        "platforms": [
+            "android",
+            "browser"
+        ]
+    }
 }
